--- a/_includes/details.html
+++ b/_includes/details.html
@@ -27,17 +27,41 @@
                         </div>
                     </div>
 
-                    <div class="color-bg-4 u-border-radius m-y5 p-4">
+                    <div class="color-bg-5 u-border-radius m-y5 p-4 u-flex u-space-between u-align-center">
                         <a href="#" class="text-h4">Inzet</a>
+                        <img src="/img/arrow-right.png" style="height: 16px; opacity: 0.5; transform: rotate(90deg)">
                     </div>
-                    <div class="color-bg-4 u-border-radius m-y5 p-4">
+
+                    <div class="p-b4 p-x4">
+                        <div class="markup-zone">
+                            <h3>Onderdeel van hoofdcategorie</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco.</p>
+                            <h4>Onderdeel van hoofdcategorie</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco.</p>
+                            <h4>Onderdeel van hoofdcategorie</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco.</p>
+                        </div>
+                    </div>
+
+                    <div class="color-bg-5 u-border-radius m-y5 p-4 u-flex u-space-between u-align-center">
                         <a href="#" class="text-h4">Toepassing</a>
+                        <img src="/img/arrow-right.png" style="height: 16px; opacity: 0.5">
                     </div>
-                    <div class="color-bg-4 u-border-radius m-y5 p-4">
+
+                    <div class="color-bg-5 u-border-radius m-y5 p-4 u-flex u-space-between u-align-center">
                         <a href="#" class="text-h4">Toezicht</a>
+                        <img src="/img/arrow-right.png" style="height: 16px; opacity: 0.5">
                     </div>
-                    <div class="color-bg-4 u-border-radius m-y5 p-4">
+
+                    <div class="color-bg-5 u-border-radius m-y5 p-4 u-flex u-space-between u-align-center">
                         <a href="#" class="text-h4">Juridisch</a>
+                        <img src="/img/arrow-right.png" style="height: 16px; opacity: 0.5">
                     </div>
                 </div>
             </div>
