Update link to images

--- a/_includes/details.html
+++ b/_includes/details.html
@@ -29,7 +29,7 @@
 
                     <div class="color-bg-5 u-border-radius m-y5 p-4 u-flex u-space-between u-align-center">
                         <a href="#" class="text-h4">Inzet</a>
-                        <img src="/img/arrow-right.png" style="height: 16px; opacity: 0.5; transform: rotate(90deg)">
+                        <img src="https://tydelyk.nl/algoritmeregister/img/arrow-right.png" style="height: 16px; opacity: 0.5; transform: rotate(90deg)">
                     </div>
 
                     <div class="p-b4 p-x4">
@@ -51,17 +51,17 @@
 
                     <div class="color-bg-5 u-border-radius m-y5 p-4 u-flex u-space-between u-align-center">
                         <a href="#" class="text-h4">Toepassing</a>
-                        <img src="/img/arrow-right.png" style="height: 16px; opacity: 0.5">
+                        <img src="https://tydelyk.nl/algoritmeregister/img/arrow-right.png" style="height: 16px; opacity: 0.5">
                     </div>
 
                     <div class="color-bg-5 u-border-radius m-y5 p-4 u-flex u-space-between u-align-center">
                         <a href="#" class="text-h4">Toezicht</a>
-                        <img src="/img/arrow-right.png" style="height: 16px; opacity: 0.5">
+                        <img src="https://tydelyk.nl/algoritmeregister/img/arrow-right.png" style="height: 16px; opacity: 0.5">
                     </div>
 
                     <div class="color-bg-5 u-border-radius m-y5 p-4 u-flex u-space-between u-align-center">
                         <a href="#" class="text-h4">Juridisch</a>
-                        <img src="/img/arrow-right.png" style="height: 16px; opacity: 0.5">
+                        <img src="https://tydelyk.nl/algoritmeregister/img/arrow-right.png" style="height: 16px; opacity: 0.5">
                     </div>
                 </div>
             </div>
