--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,8 +1,13 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="https://tydelyk.nl/algoritmeregister/css/latest.css">
+<!--
 <link rel="stylesheet" href="//www.algoritmeregister.org/css/main.css" />
 <link rel="stylesheet" href="/css/main.css" />
 <link rel="stylesheet" href="/css/compiled-dont-edit.css">
+-->
+
+
 <link
   rel="mask-icon"
   href="//www.algoritmeregister.org/img/algoritmeregister-logo-sans-text.svg"
