--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,18 +1,25 @@
-<style>
-    nav {
-        text-align: right;
-        padding: 0.4em;
-    }
-    nav a {
-        color: white;
-        display: inline-block;
-        font-size: 1.4em;
-        margin: 1em 0.4em;
-        font-family: "Noto Sans", sans-serif;
-    }
-</style>
-<nav style="background: #01689b">
-    <a href="/">home</a>
-    <a href="/algoritmes">alle algoritmes</a>
-    <a href="/registers">bronregisters</a>
+<nav class="color-bg-2 u-display-none u-md-display-block">
+  <div class="layout">
+    <div class="layout-1 u-flex u-space-between">
+      <div>
+        <a
+          href="#"
+          class="text-menu u-display-inline-block color-6 color-bg-1 p-x3"
+          >Overheid.nl</a
+        >
+        <a href="/" class="text-menu u-display-inline-block color-1 p-x3"
+          >Home</a
+        >
+        <a
+          href="/algoritmes"
+          class="text-menu u-display-inline-block color-1 p-x3"
+          >Algoritmes</a
+        >
+      </div>
+      <div>
+        <a href="#" class="text-menu color-1 p-x3">Help</a
+        ><!-- TODO added p-x3 here -->
+      </div>
+    </div>
+  </div>
 </nav>
