--- a/_layouts/algoritmeregisters.html
+++ b/_layouts/algoritmeregisters.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl">
-  <head>
-    {% include meta.html %}
-  </head>
+  {% include head.html %}
   <body>
     {% include header.html %}
 
