--- a/_layouts/algoritmes.html
+++ b/_layouts/algoritmes.html
@@ -2,11 +2,6 @@
 <html>
   {% include head.html %}
   <body>
-    <div id="details-page" style="display: none">
-      {% include header.html crumble=true searchbar=false %}
-      {% include details.html %}
-    </div>
-
     <div id="search-page" style="display: none">
       {% include header.html crumble=false searchbar=true %}
       <section class="ar-teaser-block">
@@ -21,8 +16,12 @@
       </section>
     </div>
 
+    <div id="details-page" style="display: none">
+      {% include header.html crumble=true searchbar=false %}
+      {% include details.html %}
+    </div>
 
     <script src="/js/microtemplating.js"></script>
-    <script type="module" src="/js/dataloader.js"></script>
+    <script type="module" src="/js/main.js"></script>
   </body>
 </html>
