--- a/_includes/result-template.html
+++ b/_includes/result-template.html
@@ -2,7 +2,7 @@
   <div class="ar-teaser" data-search-text="<%=name.toLowerCase()%> <%=organization.toLowerCase()%> <%=description_short%> type:<%=type.toLowerCase()%>">
     <div class="m-y4">
       <h2 class="text-h2 m-b2 color-2">
-        <a href="/algoritmes/details/<%=id%>"><%=name%></a>
+        <a href="/algoritmes/details/#<%=id%>"><%=name%></a>
       </h2>
       <p class="text-body m-b4">
         <%=description_short%>
