search form actions

--- a/_includes/__search-bar.html
+++ b/_includes/__search-bar.html
@@ -1,9 +1,14 @@
+<style>
+	button {
+		cursor: pointer;
+	}
+</style>
 <div class="search-bar p-y6">
 	<div class="layout u-justify-center">
 		<div class="layout-1 layout-md-1-2">
 			<form>
 				<div class="u-flex">
-					<input type="text" placeholder="Zoek op organisatie, titel of omschrijving" class="search-bar-input text-body u-flex-1 p-3 u-border-radius" id="search-bar">
+					<input name="q" type="text" placeholder="Zoek op organisatie, titel of omschrijving" class="search-bar-input text-body u-flex-1 p-3 u-border-radius" id="search-bar">
 					<button class="search-bar-btn color-bg-2 p-y3 p-x4 u-border-radius">
 						<img src="/img/icon-search-w.svg" class="search-bar-icon mx-auto">
 					</button>
