--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
           <p class="ovnl-header-subtitle">Algoritmes in de Overheid</p>
         </a>
         <div class="u-md-display-none">
-          <a href="#" class="burger u-border-radius">
+          <a href="/algoritmes" class="burger u-border-radius">
             <div class="burger-line-wrap m-r2">
               <div class="burger-line"></div>
               <div class="burger-line"></div>
