--- a/_includes/searchbar.html
+++ b/_includes/searchbar.html
@@ -1,9 +1,15 @@
+<style>
+  .btn {
+    cursor: pointer;
+  }
+</style>
 <div class="ovnl-header-crumble color-bg-3">
   <div class="layout u-justify-center">
     <div class="layout-1 layout-md-1-2 p-t2">
       <div class="ovnl-search">
         <form class="u-flex u-align-start">
           <input
+            name="q"
             id="search-bar"
             class="ovnl-search-input m-b3 u-flex-1"
             type="text"
